@@ -17,9 +17,10 @@ namespace GameOfLife
 		{
 			// Forslag til regelfunksjon frå Trond
 			
-			
-            int[,] tabOrg = new int[30, 30];
-            int[,] tabNy = new int[30, 30];
+			// Frå Gaute: Hent ny og gammal tabell frå Table
+			// Sjekk at vi får ein 'peikar'/'ref' og ikkje ein kopi.. ?
+            int[,] tabOrg = table.TableNow;
+            int[,] tabNy = table.TableNext;
 
             // A og B er kordinatene i et grid.
             int A = 0; // A, rad. 0,0 - 0, 1 = a, 0 - a, 1
@@ -36,25 +37,23 @@ namespace GameOfLife
 
                     // Kode skal sjekke alle cellene rundt en celle med kord. A,B. 
                     // Og telle opp hvor mange celler det er noe i.
-                    if ((A+1) > 30 || (A-1) < 0 || (B+1) > 30 || (B-1) < 0)
-                        nabo == nabo;
-                    else
+                    if (!((A+1) > 30 || (A-1) < 0 || (B+1) > 30 || (B-1) < 0))
                     {
-                        if (tabOrg[A - 1, B - 1])
+                        if (tabOrg[A - 1, B - 1] != 0)
                             nabo++;
-                        if (tabOrg[A - 1, B])
+                        if (tabOrg[A - 1, B] != 0)
                             nabo++;
-                        if (tabOrg[A - 1, B + 1])
+                        if (tabOrg[A - 1, B + 1] != 0)
                             nabo++;
-                        if (tabOrg[A, B - 1])
+                        if (tabOrg[A, B - 1] != 0)
                             nabo++;
-                        if (tabOrg[A, B + 1]) // hopper jo over A,B. 
+                        if (tabOrg[A, B + 1] != 0) // hopper jo over A,B. 
                             nabo++;
-                        if (tabOrg[A + 1, B - 1])
+                        if (tabOrg[A + 1, B - 1] != 0)
                             nabo++;
-                        if (tabOrg[A + 1, B])
+                        if (tabOrg[A + 1, B] != 0)
                             nabo++;
-                        if (tabOrg[A + 1, B + 1])
+                        if (tabOrg[A + 1, B + 1] != 0)
                             nabo++;
                     } // slutt if\else
 
@@ -63,24 +62,22 @@ namespace GameOfLife
                     // og leve om det er 2,3.
                     // Hvis det er tom celle skal det bli ny celle ved at det er 3 naboer.
 
-                    if (tabOrg(A, B)) // lever celle i A,B.
+                    if (tabOrg[A, B] != 0) // lever celle i A,B.
                     {
                         if (nabo == 2 || nabo == 3) // leve
-                            tabNy(A, B) = 1;
+                            tabNy[A, B] = 1;
                         else                        // dø
-                            tabNy(A, B) = 0;
+                            tabNy[A, B] = 0;
                     }
                     else
                     {
                         if (nabo == 3)
-                            tabNy(A, B) = 1;
+                            tabNy[A, B] = 1;
                     }
 
                     nabo = 0;
 
                     // klar for ny runde...
-
-
                 }
             }
 		}
